plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.walletApplication'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

repositories {
	mavenCentral()
	maven {
		url "https://packages.confluent.io/maven"
	}

}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	implementation 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	implementation 'org.slf4j:slf4j-api:2.0.9'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.0'
	testImplementation 'junit:junit:4.13.1'
	testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.2'
}

tasks.named('test') {
	useJUnitPlatform()
}
